Improved performance by using parallelism during finding nodes closer than